[gd_scene load_steps=2 format=3 uid="uid://bbf2t5ykhi47s"]

[ext_resource type="Script" path="res://Scenes/LevelUI.gd" id="1_yoj18"]

[node name="LevelUI" type="CanvasLayer"]
script = ExtResource("1_yoj18")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 97.0
offset_top = 4.0
offset_right = 321.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Timer"

[node name="RemainingLabel" type="Label" parent="Control"]
layout_mode = 0
offset_right = 509.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 40
text = "Remaining"

[node name="LevelTimer" type="Timer" parent="."]
one_shot = true
